--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Jindong's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/jindong_cao_10_31.pdf" target="_blank"
+        <a aria-label="Open Jindong's resume in a new tab" href="https://cjdwd.github.io/assets/resume/jindong_cao_10_31.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -172,7 +172,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Jindong's Resume in a new tab"
-          href="https://varadbhogayata.github.io/assets/resume/jindong_cao_10_31.pdf" target="_blank"
+          href="https://cjdwd.github.io/assets/resume/jindong_cao_10_31.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
