--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["AI Developer", "Software Developer", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
