--- a/index.html
+++ b/index.html
@@ -195,27 +195,27 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://imgcreator.zmo.ai/ai-generator?type=swap_anything" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/ZMO_AI.webp" class="responsive-img center-block" /></a>
+                <a href="https://imgcreator.zmo.ai/ai-generator?type=swap_anything" target="_blank"><img alt="ZMO.AI logo"
+                    src="/assets/img/ZMO.AI_.webp" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://imgcreator.zmo.ai/ai-generator?type=swap_anything" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">ZMO.AI</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Machine Learning Engineer Intern</div>
             <ul>
               <li>
-                • Developed an AI tool for image editing, significantly enhancing the quality of image editing tasks.
+              Developed an AI tool for image editing, significantly enhancing the quality of image editing tasks.
               </li>
               <li>
-              • Integrated multiple advanced AI models, including ChatGPT, Segment Anything Model (SAM), Grounding-Dino, 
+              Integrated multiple advanced AI models, including ChatGPT, Segment Anything Model (SAM), Grounding-Dino, 
               and Stable Diffusion, to achieve high-quality image editing results, enabling the image to be more realistic.
               </li>
-              <li>• Implemented model pruning on Blip2 and CLIP models, optimizing their efficiency, reduced memory usage by 
+              <li>Implemented model pruning on Blip2 and CLIP models, optimizing their efficiency, reduced memory usage by 
 30%, reduced average runtime by 40%.</li>
               <li>
                 <b>Skills:</b> Python, PyTorch, LLM, Model Pruning and Quantization
@@ -239,18 +239,18 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.huawei.com/en/" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                      class="teal-text hoverline">Huawei</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Software Engineer Intern</div>
             <ul>
               <li>
-                • Completed the refactoring of a data center that significantly improved its operational efficiency, reduced the 
+                Completed the refactoring of a data center that significantly improved its operational efficiency, reduced the 
                 average query time by 70%. 
               </li>
               <li>
-                • Designed more appropriate data structures by specifically analyzing the application scenarios, reducing the query 
+                Designed more appropriate data structures by specifically analyzing the application scenarios, reducing the query 
                 time complexity of the data center. Wrote automation test code for future code updates and maintenance.
               </li>
               <li>
