--- a/index.html
+++ b/index.html
@@ -349,43 +349,6 @@
             </div>
           </div>
 
-          <!-- 1. Django Project -->
-          <!-- <div class="col s12 m6 l6">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="django web app" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Local Library Web-App<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, SQLite, Django, Heroku</li>
-                  <li>Users can view list and detail information for books and authors.</li>
-                  <li>Admin users can create and manage models.</li>
-                  <li>Librarians can renew reserved books.</li>
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit " href="https://django-local-lib.herokuapp.com" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
           <!-- Flask Project -->
           <div class="col s12 m6 l4">
             <div class="card medium">
@@ -585,11 +548,11 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.cmu.edu/" target="_blank" class="teal-text hoverline">Carnegie Mellon University</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Pittsburgh, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Master of Science in Electrical and Computer Engineering      
                   <br>
                   <b>CGPA: </b>4.0/4.0
                 </p>
@@ -598,9 +561,8 @@
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Speech Recognition</li>
+                    <li>Hardware Arithmetic for Machine Learning</li>                    
                   </ul>
                   </p>
 
@@ -614,14 +576,13 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://www.sysu.edu.cn/sysuen/" target="_blank" class="teal-text hoverline">Sun Yat-Sen University</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Guangzhou, China</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Science in Computer Science
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>3.9/4.0
                 </p>
 
                 <ul>
@@ -632,7 +593,7 @@
                     <li>Database Management Systems</li>
                     <li>Operating Systems</li>
                     <li>Machine Learning</li>
-                    <li>Computer Vision</li>
+                    <li>Computer Network</li>
                   </ul>
                   </p>
 
@@ -651,27 +612,27 @@
         <p>
           <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Varad">+1 4126063179</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Varad" href="mailto:jamescaojd@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:jamescaojd@gmail.com"
+              class="hoverline">jamescaojd@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
+          <a aria-label="View Varad on GitHub" href="http://github.com/cjdwd" target="_blank"
             data-position="top" data-tooltip="View Varad on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Varad on Github" href="http://github.com/cjdwd" class="hoverline"
+              target="_blank">github.com/cjdwd</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
+          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/" target="_blank"
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/"
+              class="hoverline" target="_blank">linkedin.com/in/jindong-cao-9a526b252/</a></a>
         </p>
       </div>
     </section>
