--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://cjdwd.github.io/assets/resume/new_manuscript" target="_blank"
+                  <span class="card-title"><a href="https://cjdwd.github.io/assets/resume/new_manuscript.pdf" target="_blank"
                       class="teal-text hoverline">MedPrompt</a></span>
                 </p>
               </div>
