--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+        <!-- <a aria-label="Open Jindong's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Jindong's resume in a new tab" href="https://cjdwd.github.io/assets/resume/jindong_cao_10_31.pdf" target="_blank"
@@ -119,8 +119,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Jindong
+        Cao</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -414,28 +414,28 @@ classification ability is enhanced.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Jindong" data-position="top" data-tooltip="Call Jindong"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+1 4126063179</a></a>
+              aria-label="Call Jindong">+1 4126063179</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:jamescaojd@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:jamescaojd@gmail.com"
+          <a aria-label="Email Jindong" href="mailto:jamescaojd@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Jindong" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Jindong" href="mailto:jamescaojd@gmail.com"
               class="hoverline">jamescaojd@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/cjdwd" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Jindong on GitHub" href="http://github.com/cjdwd" target="_blank"
+            data-position="top" data-tooltip="View Jindong on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/cjdwd" class="hoverline"
+              aria-label="Jindong on Github" href="http://github.com/cjdwd" class="hoverline"
               target="_blank">github.com/cjdwd</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Jindong on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/" target="_blank"
+            data-position="top" data-tooltip="View Jindong on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/"
+              class="fa fa-linkedin"></i><a aria-label="Jindong on LinkedIn" href="https://www.linkedin.com/in/jindong-cao-9a526b252/"
               class="hoverline" target="_blank">linkedin.com/in/jindong-cao-9a526b252/</a></a>
         </p>
       </div>
