--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ classification ability is enhanced.
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Research Assitant</div>
+            <div class="role brown-text text-darken-2">Research Assistant</div>
             <ul>
               <li>
                 Efficiently predicting Drug Target Interaction using LSTM and FPN.
